--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-01",
+  "name": "goit-react-hw-05",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,13 +13,12 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "modern-normalize": "^2.0.0",
+    "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-modal": "^3.16.1",
-    "react-router-dom": "^6.23.1",
-    "react-spinners": "^0.13.8",
-    "yup": "^1.4.0"
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
